objects/sumoapp__Invite__c.object
<CustomObject>
    <fields>
        <fullName>sumoapp__AdditionalParticipants__c</fullName>
        <label>Additional Participants</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__AllowAnyAvailability__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Any Availability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__AppointmentType__c</fullName>
        <label>Appointment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__AvailabilityOption__c</fullName>
        <label>Time Option</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__BufferTimePost__c</fullName>
        <inlineHelpText>If set, SUMO will create a Post-Buffer appointment after the scheduled appointment, to give the Host a buffer.</inlineHelpText>
        <label>Post-Buffer Time (Minutes)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>120</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__BufferTimePre__c</fullName>
        <inlineHelpText>If set, SUMO will create a Pre-Buffer appointment before the scheduled appointment, to give the Host a buffer.</inlineHelpText>
        <label>Pre-Buffer Time (Minutes)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>120</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__Capacity__c</fullName>
        <label>Capacity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__Color__c</fullName>
        <defaultValue>&quot;#EEEEEE&quot;</defaultValue>
        <description>Html Color Code</description>
        <label>Color</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__DurationOptions__c</fullName>
        <label>Duration Options</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>75</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>105</fullName>
                </value>
                <value>
                    <fullName>120</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__DynamicTravelTimeStrategy__c</fullName>
        <label>Dynamic Travel Time Strategy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__EndDateTime__c</fullName>
        <label>End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sumoapp__ExpirationDate__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sumoapp__IncludeWebConfDetails__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Include Video Conference Details</inlineHelpText>
        <label>Include Video Conf Details?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__InviteLink__c</fullName>
        <label>Invite Link</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__IsRecurring__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Recurring</inlineHelpText>
        <label>Is Recurring?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__IsRoomAutoAssign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Room Auto Assign?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__LimitOfAppointments__c</fullName>
        <label>Limit of Appointments</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__LocationDetails__c</fullName>
        <label>Location Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__LocationGeometry__c</fullName>
        <label>Location Geometry</label>
        <scale>14</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>sumoapp__LocationType__c</fullName>
        <label>Location Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>sumoapp__Location__c</referenceTo>
        <relationshipLabel>Location Invites</relationshipLabel>
        <relationshipName>LocationInvites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sumoapp__MatchOnObject__c</fullName>
        <label>Create/Match On</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__Note__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Note</label>
        <referenceTo>sumoapp__Note__c</referenceTo>
        <relationshipLabel>Invites</relationshipLabel>
        <relationshipName>Invites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sumoapp__OrganizerName__c</fullName>
        <label>Organizer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__OrganizerTitle__c</fullName>
        <label>Organizer Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__Organizer__c</fullName>
        <label>Host ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__PlaceId__c</fullName>
        <description>Google Place Id corresponding to event location</description>
        <label>Place Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__PrimaryClient__c</fullName>
        <label>Primary Participant</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process #</label>
        <referenceTo>sumoapp__Process__c</referenceTo>
        <relationshipLabel>Invites</relationshipLabel>
        <relationshipName>Invites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sumoapp__RelatedTo__c</fullName>
        <label>Related To</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__ResourcePoolPriorityLevel__c</fullName>
        <label>Resource Pool Priority Level</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__RollingWindow__c</fullName>
        <defaultValue>5</defaultValue>
        <label>Rolling Window</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service</label>
        <referenceTo>sumoapp__Service__c</referenceTo>
        <relationshipLabel>Service Invites</relationshipLabel>
        <relationshipName>ServiceInvites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sumoapp__ShowInternalEmails__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Show Email Address of Internal Attendees</inlineHelpText>
        <label>Show Internal Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__StartDatetime__c</fullName>
        <label>Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sumoapp__TimeZoneSidKey__c</fullName>
        <label>TimeZoneSidKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__TypeLimitOfAppointments__c</fullName>
        <description>If type LINK then we are limiting the total # of appointments that can be scheduled from this link.
If type PARTICIPANT then we are limiting the the total # of appointments that can be scheduled from this link per participant.</description>
        <label>Type Limit of Appointments</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LINK</fullName>
                    <label>Link</label>
                </value>
                <value>
                    <fullName>PARTICIPANT</fullName>
                    <label>Participant</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__VideoConferenceDetailsType__c</fullName>
        <label>Video Conference Details Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Host</fullName>
                    <default>true</default>
                    <label>Host</label>
                </value>
                <value>
                    <fullName>Primary Participant</fullName>
                </value>
                <value>
                    <fullName>Get details from the Host</fullName>
                    <isActive>false</isActive>
                    <label>Get details from the Host</label>
                </value>
                <value>
                    <fullName>Let primary client provide his link</fullName>
                    <isActive>false</isActive>
                    <label>Let primary client provide his link</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SUMO Appt Invite</label>
    <listViews>
        <fullName>sumoapp__All</fullName>
        <columns>NAME</columns>
        <columns>sumoapp__AppointmentType__c</columns>
        <columns>sumoapp__Service__c</columns>
        <columns>sumoapp__DurationOptions__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>sumoapp__Invite__c.sumoapp__InviteLink</value>
        </filters>
        <label>All Email Invite Links</label>
    </listViews>
    <listViews>
        <fullName>sumoapp__AllAppointmentLinks</fullName>
        <columns>NAME</columns>
        <columns>sumoapp__AppointmentType__c</columns>
        <columns>sumoapp__Service__c</columns>
        <columns>sumoapp__DurationOptions__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Appointment links</label>
    </listViews>
    <listViews>
        <fullName>sumoapp__AllEmailInviteLinks</fullName>
        <columns>NAME</columns>
        <columns>sumoapp__AppointmentType__c</columns>
        <columns>sumoapp__Service__c</columns>
        <columns>sumoapp__DurationOptions__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>sumoapp__Invite__c.sumoapp__EmailInvite</value>
        </filters>
        <label>All Email Invite Links</label>
    </listViews>
    <listViews>
        <fullName>sumoapp__AllPersonalLinks</fullName>
        <columns>NAME</columns>
        <columns>sumoapp__AppointmentType__c</columns>
        <columns>sumoapp__Service__c</columns>
        <columns>sumoapp__DurationOptions__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>sumoapp__Invite__c.sumoapp__InviteLink</value>
        </filters>
        <label>All Personal Links</label>
    </listViews>
    <listViews>
        <fullName>sumoapp__AllRecentlyCreatedInviteLinks</fullName>
        <columns>NAME</columns>
        <columns>sumoapp__AppointmentType__c</columns>
        <columns>sumoapp__Service__c</columns>
        <columns>sumoapp__DurationOptions__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>All Recently Created Invite Links</label>
    </listViews>
    <listViews>
        <fullName>sumoapp__MyAppointmentLinks</fullName>
        <columns>NAME</columns>
        <columns>sumoapp__AppointmentType__c</columns>
        <columns>sumoapp__Service__c</columns>
        <columns>sumoapp__DurationOptions__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Appointment Links</label>
    </listViews>
    <listViews>
        <fullName>sumoapp__MyEmailInviteLinks</fullName>
        <columns>NAME</columns>
        <columns>sumoapp__AppointmentType__c</columns>
        <columns>sumoapp__Service__c</columns>
        <columns>sumoapp__DurationOptions__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>sumoapp__Invite__c.sumoapp__EmailInvite</value>
        </filters>
        <label>My Email Invite Links</label>
    </listViews>
    <listViews>
        <fullName>sumoapp__MyInviteLinks</fullName>
        <columns>NAME</columns>
        <columns>sumoapp__AppointmentType__c</columns>
        <columns>sumoapp__Service__c</columns>
        <columns>sumoapp__DurationOptions__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>sumoapp__Invite__c.sumoapp__InviteLink</value>
        </filters>
        <label>My Email Invite Links</label>
    </listViews>
    <listViews>
        <fullName>sumoapp__MyPersonalLinks</fullName>
        <columns>NAME</columns>
        <columns>sumoapp__AppointmentType__c</columns>
        <columns>sumoapp__Service__c</columns>
        <columns>sumoapp__DurationOptions__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>sumoapp__Invite__c.sumoapp__InviteLink</value>
        </filters>
        <label>My Personal Links</label>
    </listViews>
    <listViews>
        <fullName>sumoapp__MyRecentlyCreatedInviteLinks</fullName>
        <columns>NAME</columns>
        <columns>sumoapp__AppointmentType__c</columns>
        <columns>sumoapp__Service__c</columns>
        <columns>sumoapp__DurationOptions__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>My Recently Created Invite Links</label>
    </listViews>
    <nameField>
        <displayFormat>I-{000000}</displayFormat>
        <label>Appt Link #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SUMO Appt Links</pluralLabel>
    <recordTypes>
        <fullName>sumoapp__EmailInvite</fullName>
        <active>true</active>
        <label>Appt Link</label>
    </recordTypes>
    <recordTypes>
        <fullName>sumoapp__InviteLink</fullName>
        <active>true</active>
        <label>Invite Link</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>